<resources>
    <string name="app_name">YYDRobotVoiceMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appid">56065ce8</string>
    <string name="comman_unkonw">这个问题,我还没学会</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="app_name1">拍照</string>
    <string name="app_name2">录像</string>
    <string name="tq001_meiyouzheshoushi">对不起,没有这首诗</string>
    <string name="learnsinology_qingtingti">请听题:</string>
    <string name="learnsinology_dexiayijushishenme">,的下一句是什么</string>
    <string name="learnsinology_huidazhengque">回答正确</string>
    <string name="learnsinology_huidacuowu">回答错误</string>
    <string name="learnsinology_de">的</string>
    <string name="learnsinology_zai">在</string>
    <string name="learnsinology_limiande">里面写的:</string>
    <string name="learnsinology_zhongwen_douhao">，</string>
    <string name="learnsinology_zhongwen_juhao">。</string>
    <string name="tq003_videoinformation_geinituijian">给你推荐这些好看的电影吧:</string>
    <string name="tq003_videoinformation_duibuqi">对不起,我找不到这种类型的电影</string>
    <string name="tq003_videoinformation_area_cn_dalu">大陆</string>
    <string name="tq003_videoinformation_area_cn_zhongguo">中国</string>
    <string name="tq003_videoinformation_area_cn_niedi">内地</string>
    <string name="tq003_videoinformation_area_cn_guochan">国产</string>
    <string name="tq003_videoinformation_area_hk_xianggang">香港</string>
    <string name="tq003_videoinformation_area_hk_gangchan">港产</string>
    <string name="tq003_videoinformation_area_western_meiguo">美国</string>
    <string name="tq003_videoinformation_area_western_haolaiwu">好莱坞</string>
    <string name="tq003_videoinformation_area_western_oumei">欧美</string>
    <string name="tq004_dance_dianyadi">电压低,不能跳舞</string>
    <string name="tq004_tingzhi">停止</string>
    <string name="tq004_buyao">不要</string>
    <string name="tq004_bie">别</string>
    <string name="tq007_liuxing">流行</string>
    <string name="tq007_yinyuemeizhaodao">音乐没找到</string>
    <string name="tq007_nothing_opera">戏曲未找到</string>
    <string name="tq007_zhoujielun">周杰伦</string>
    <string name="tq007_tiao">跳</string>
    <string name="tq007_xiqu">戏曲</string>
    <string name="tq007_xi">戏</string>
    <string name="tq007_xiqqu">戏去</string>
    <string name="tq007_jingju">京剧</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="app_id">56065ce8</string>
    <string name="dyc_map_search">正在搜索</string>
    <string name="dyc_map_route_start">我给你提够一条速度最快的路线。</string>
    <string name="dao">到</string>
    <string name="dyc_map_key_city">市</string>
    <string name="juli_key">距离</string>
    <string name="duoyuan_key">多远</string>
    <string name="juli">的距离大概是</string>
    <string name="danwei">公里</string>
    <string name="here">这里</string>
    <string name="me">如果我没记错的话，</string>
    <string name="start_speak">开始播放</string>
    <string name="pause_speak">暂停播放</string>
    <string name="continue_speak">继续播放</string>
    <string name="complete_speak">播放完成</string>
    <string name="error_initialize">初始化失败,错误码：</string>
    <string name="error_Tts">语音合成失败,错误码：</string>
    <string name="input_number">只能输入数字哦</string>
    <string name="beyond_scope">超出有效值范围</string>
    <string name="error_path">路线计算失败,检查参数情况</string>
    <string name="pls">请先进行相对应的路径规划，再进行导航</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="text_begin">请开始说话…</string>
    <string name="DYlands">钓鱼岛</string>
    <string name="HYlands">黄岩岛</string>
    <string name="success">主人,找到你想要的位置了</string>
    <string name="fail">主人,对不起,没有你要找的城市</string>
    <string name="no_story">真心不明白你在说什么</string>
    <string name="link_error">网络请求失败</string>
    <string name="storyname">好的，让我来给你讲</string>
    <string name="storytext">的故事吧。</string>
    <string name="down_percent">下跌百分之</string>
    <string name="down">下跌</string>
    <string name="yuan">元，</string>
    <string name="up_percent">上涨百分之</string>
    <string name="up">上涨</string>
    <string name="point">点，</string>
    <string name="juhao">。</string>
    <string name="shangzheng">上证指数为</string>
    <string name="shencheng">深圳成指为</string>
    <string name="hongkong">恒生指数为</string>
    <string name="now_price">当前的股票价格为</string>
    <string name="dot_check_stock">让您失望了，我还查询不到这支股票</string>
    <string name="no_stock">对不起，您说的股票名字有误，请说正确的股票名字</string>
    <string name="dyc_poweroff">关机</string>
    <string name="dyc_lowbattery">主人，请给我充电</string>
    <string name="dyc_querystart">主人，我还有百分之</string>
    <string name="dyc_queryend">的电量。</string>
    <string name="dyc_sound_up">up</string>
    <string name="dyc_sound_down">down</string>
    <string name="dyc_sound_max">max</string>
    <string name="dyc_sound_min">min</string>
    <string name="dyc_poweroff_greet">好的，再会主人。</string>
    <string name="dyc_response_max">现在的我再也不是矜持的我了！我要变成大嗓门了！</string>
    <string name="dyc_response_min">主人，这么小声你是有什么秘密要告诉我吗？</string>
    <string name="dyc_response_up">我声音大不？</string>
    <string name="dyc_response_down">主人，您看我这样婶儿的语气您还满意不？</string>
    <string name="dyc_sound_two">两格</string>
    <string name="dyc_sound_three">三格</string>
    <string name="dyc_sound_four">四格</string>
    <string name="dyc_sound_five">五格</string>
    <string name="dyc_up_max">好的，音量调到最大</string>
    <string name="dyc_up">好的，音量增大</string>
    <string name="dyc_scale">格</string>
    <string name="dyc_up_min">好的，音量调到最小</string>
    <string name="dyc_down">好的，音量减小</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="shutdown">关机</string>
    <string name="understand">语义理解</string>
    <string name="map_success">主人,找到你想要的位置了</string>
    <string name="map_fail">主人,对不起,没有你要找的城市</string>
    <string name="search">正在搜索</string>
    <string name="add">加</string>
    <string name="subtract">减</string>
    <string name="multiply">乘以</string>
    <string name="divide">除以</string>
    <string name="children">小朋友</string>
    <string name="equal">等于多少</string>
    <string name="answer">等于</string>
    <string name="no_news">"这个问题对我来说有点难哦"</string>
    <string name="weather_village">村</string>
    <string name="weather_province">省</string>
    <string name="weather_town">镇</string>
    <string name="weather_mountain">山</string>
    <string name="weather_island">岛</string>
    <string name="weather_county">县</string>
    <string name="weather_day">天</string>
    <string name="weather_rain">雨</string>
    <string name="weather_snow">雪</string>
    <string name="weather_clear">晴</string>
    <string name="weather_cloud">云</string>
    <string name="weather_shade">阴</string>
    <string name="weather_haze">霾</string>
    <string name="weather_fog">雾</string>
    <string name="weather_saycorrectcity">主人,你要说清楚是哪个城市才行哦</string>
    <string name="weather_situation">的天气情况为,</string>
    <string name="weather_temperature">,温度为:</string>
    <string name="weather_keepwarm">。建议主人多穿几件衣服。注意保暖，</string>
    <string name="weather_takeumbrella">。建议主人您如果要出门时，务必带把雨伞，以免被雨淋湿，导致感冒发烧。</string>
    <string name="weather_keepsafe">。由于雾的浓度高，可见度不高，所以外出时，请务必注意安全。</string>
    <string name="weather_below">以下是</string>
    <string name="weather_futureday">未来几天的天气情况</string>
    <string name="weather_standardcity">主人，天气预报是以城市来预报天气的。比如：上海今天的天气情况怎么样</string>
    <string name="weather_Specificarea">主人，你可以说具体地区的天气情况，比如你说：北京今天的天气怎么样</string>
    <string name="weather_excessweek">对不起，主人，我没法预知超出一周的天气情况</string>
    <string name="endcall_specific">主人你可以说的具体一点,比如你说：我要给小李打电话</string>
    <string name="endcall_iscalling">正在打电话给</string>
    <string name="endcall_waitplease">,请稍候</string>
    <string name="endcall_callplease">正在拨打电话，请稍候</string>
    <string name="endcall_okimmediatelycall">好的，主人。我马上打电话</string>
    <string name="endcall_sorrynotfind">对不起主人，没有在你的联系人列表里面找到</string>
    <string name="endcall_owner">主人</string>
    <string name="endcall_callyou">给你打电话啦，快来接电话。</string>
    <string name="endcall_numberis">电话号码是：</string>
    <string name="endcall_someonecallyou">主人有人给你打电话了,</string>
    <string name="endcall_code">电话号码是 : </string>
    <string name="joke">笑话</string>
    <string name="joke_type_sport">体育</string>
    <string name="joke_type_cool">冷</string>
    <string name="joke_have_not_the_type_joke">暂时没有添加此类型笑话</string>
    <string name="joke_have_not_the_joke">没有这个笑话</string>
    <string name="COOK_SOURCE">豆果网</string>
    <string name="cook_web">豆果网</string>
    <string name="cook_not_find_the_cook">没找到这道菜</string>
    <string name="cook_not_find">没找到</string>
    <string name="cook_access_server_faile">访问失败</string>
    <string name="cook_commend_love_eat">一般喜欢吃:</string>
    <string name="cook_child1">小孩</string>
    <string name="cook_child2">儿童</string>
    <string name="cook_de_step_list">的做法如下:首先要准备的材料有,</string>
    <string name="cook_step_content">,具体步骤:</string>
    <string name="cook_no">第</string>
    <string name="cook_step">步,</string>
    <string name="cook_temporary_not_have">暂时没有这个菜谱</string>
    <string name="query">查询</string>
    <string name="query_false">查询失败</string>
    <string name="temperatrue_is">温度为</string>
    <string name="not_adaptive">主人,您还没有适配相应家电</string>
    <string name="not_find_device">没找到该设备</string>
    <string name="smarthome_err_frequent_operation">主人,操作不能太频繁啦</string>
    <string name="know">好的,</string>
    <string name="openTV">按下电视电源键</string>
    <string name="closeTV">按下电视电源键</string>
    <string name="openMenu">打开电视菜单</string>
    <string name="openSignal">打开电视信号源</string>
    <string name="setTVMute">按下电视静音键</string>
    <string name="tvUp">上</string>
    <string name="tvDown">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="turnup">调高</string>
    <string name="turndown">调低</string>
    <string name="openHomepage">打开电视主页</string>
    <string name="view_log">查看日志</string>
    <string name="export_log">导出日志</string>
    <string name="clean_text">清除显示框</string>
    <string name="clean_log">清除日志文件</string>
    <string name="log_exit">退出</string>
    <string name="log_time">时间</string>
    <string name="default_time">"2016-01-01 00:00:00"</string>
    <string name="log_packagename">包名</string>
    <string name="module_name">模块名</string>
    <string name="log_className">类名</string>
    <string name="log_method">方法名</string>
    <string name="log_info">信息</string>
    <string name="log_tag">tag</string>
    <string name="main_exit">退出</string>
    <string name="main_log">查看日志</string>
    <string name="main_module1">模拟启动chat子模块1</string>
    <string name="main_module2">模拟启动music子模块1</string>
    <string name="main_module3">模拟启动chat子模块2</string>
    <string name="main_sub">模拟启动提醒子模块</string>
</resources>